# mc-server-receptionist

./: .gitignore  Cargo.toml  README.md
src/: codec.rs  config.rs  connection.rs  ec2.rs  main.rs  protocol.rs  receptionist.rs  util.rs
src/connection/: codec.rs  protocol.rs
src/connection/protocol/: configuration.rs  handshake.rs  login.rs  packet.rs  status.rs
