[package]
name = "mc-server-receptionist"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = " 1" }
byteorder = { version = "1" }
uuid = { version = "1" }
log = "0.4.28"
rsa = { version = "0.9" }
rand = "0.8.5"
cfb8 = { version = "0.7" }
aes = { version = "0.7" }
async-trait = { version = "0.1" }
toml = { version = "0.9" }
aws-sdk-ec2 = { version = "1" }
aws-config = { version = "1" }
